安全控件sample差异消除
Signed-off-by: fanchenxuan <fanchenxuan@huawei.com>
Change-Id: If678d0588142f4c7b84c4fd4f467ba45c1acb41d

--- a/code/DocsSample/Security/RequestUserAuthorization/entry/src/main/module.json5
+++ b/code/DocsSample/Security/RequestUserAuthorization/entry/src/main/module.json5
@@ -13,8 +13,10 @@
  * limitations under the License.
  */
 
+// [Start request_permission_json]
 {
   "module": {
+    // [StartExclude request_permission_json]
     "name": "entry",
     "type": "entry",
     "description": "$string:module_desc",
@@ -71,6 +73,7 @@
         ]
       }
     ],
+    // [EndExclude request_permission_json]
     "requestPermissions": [
       {
         "name": "ohos.permission.APPROXIMATELY_LOCATION",
@@ -95,3 +98,4 @@
     ]
   }
 }
+// [End request_permission_json]
