--- a/code/DocsSample/ArkUISample/NativeType/native_type_sample/entry/src/main/cpp/CMakeLists.txt
+++ b/code/DocsSample/ArkUISample/NativeType/native_type_sample/entry/src/main/cpp/CMakeLists.txt
@@ -41,8 +41,9 @@ target_link_libraries(entry PUBLIC
     libhilog_ndk.z.so
     libnative_drawing.so
     libability_base_want.so
+    libpixelmap.so
 )
 target_link_libraries(entry PUBLIC ${hilog-lib} ${libace-lib} ${libnapi-lib})
 target_link_libraries(entry PUBLIC ${libace-lib} libace_napi.z.so libnative_drawing.so libhilog_ndk.z.so)
 target_link_libraries(entry PUBLIC ${EGL-lib} ${GLES-lib} libace_napi.z.so libhilog_ndk.z.so libace_ndk.z.so libnative_window.so)
-target_link_libraries(entry PUBLIC ${libace-lib} libace_napi.z.so libnative_drawing.so libhilog_ndk.z.so libability_base_want.so)
+target_link_libraries(entry PUBLIC ${libace-lib} libace_napi.z.so libnative_drawing.so libhilog_ndk.z.so libability_base_want.so libpixelmap.so)
