--- a/code/DocsSample/ArkUISample/native_node_sample/entry/src/main/cpp/CMakeLists.txt
+++ b/code/DocsSample/ArkUISample/native_node_sample/entry/src/main/cpp/CMakeLists.txt
@@ -26,6 +26,10 @@ find_library(
     libace-lib
     libnapi-lib
     ace_napi.z
+    EGL-lib
+    EGL
+    GLES-lib
+    GLESv3
 )
 target_link_libraries(entry PUBLIC
     libace_ndk.z.so
@@ -34,3 +38,7 @@ target_link_libraries(entry PUBLIC
     libnative_drawing.so
     libability_base_want.so
 )
+
+target_link_libraries(entry PUBLIC ${libace-lib} libace_napi.z.so libnative_drawing.so libhilog_ndk.z.so)
+target_link_libraries(entry PUBLIC ${EGL-lib} ${GLES-lib} libace_napi.z.so libhilog_ndk.z.so libace_ndk.z.so libnative_window.so)
+target_link_libraries(entry PUBLIC ${libace-lib} libace_napi.z.so libnative_drawing.so libhilog_ndk.z.so libability_base_want.so)
