upgrade to latest version
Signed-off-by: qianyong325 <qianyong15@h-partners.com>

--- a/code/Solutions/InputMethod/KikaInputMethod/build-profile.json5
+++ b/code/Solutions/InputMethod/KikaInputMethod/build-profile.json5
@@ -21,8 +21,13 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "compileSdkVersion": 12,
-        "compatibleSdkVersion": 12,
+        "buildOption": {
+          "externalNativeOptions": {
+            "abiFilters": ["arm64-v8a", "x86_64"]
+          },
+        }
+        "compileSdkVersion": 22,
+        "compatibleSdkVersion": 22,
         "runtimeOS": "OpenHarmony"
       }
     ]
