--- a/code/Solutions/InputMethod/KikaInputMethod/entry/build-profile.json5
+++ b/code/Solutions/InputMethod/KikaInputMethod/entry/build-profile.json5
@@ -16,14 +16,44 @@
 {
   "apiType": 'stageMode',
   "buildOption": {
+    "resOptions": {
+      "copyCodeResource": {
+        "enable": false
+      }
+    },
+    "externalNativeOptions": {
+      "path": "./src/main/cpp/CMakeLists.txt",
+      "arguments": "",
+      "cppFlags": "",
+    }
   },
   "targets": [
     {
       "name": "default",
-      "runtimeOS": "OpenHarmony"
     },
     {
       "name": "ohosTest",
     }
+  ],
+  "buildOptionSet": [
+    {
+      "name": "release",
+      "arkOptions": {
+        "obfuscation": {
+          "ruleOptions": {
+            "enable": false,
+            "files": [
+              "./obfuscation-rules.txt"
+            ]
+          }
+        }
+      },
+      "nativeLib": {
+        "debugSymbol": {
+          "strip": true,
+          "exclude": []
+        }
+      }
+    },
   ]
 }
