--- a/code/Solutions/InputMethod/KikaInputMethod/entry/src/main/module.json5
+++ b/code/Solutions/InputMethod/KikaInputMethod/entry/src/main/module.json5
@@ -13,6 +13,7 @@
  * limitations under the License.
  */
 
+// [Start input_case_entry_module]
 {
   "module": {
     "name": "entry",
@@ -33,6 +34,7 @@
         "value": "true"
       }
     ],
+    // [Start input_case_entry_module_extensionAbilities]
     "extensionAbilities": [
       {
         "srcEntry": "./ets/ServiceExtAbility/ServiceExtAbility.ets",
@@ -40,9 +42,16 @@
         "label": "$string:MainAbility_label",
         "description": "$string:extension_ability_descripter",
         "type": "inputMethod",
-        "exported": true
+        "exported": true,
+        "metadata": [
+          {
+            "name": "ohos.extension.input_method",
+            "resource": "$profile:input_method_config"
+          }
+        ]
       }
     ],
+    // [End input_case_entry_module_extensionAbilities]
     "abilities": [
       {
         "name": "EntryAbility",
@@ -67,3 +76,4 @@
     ]
   }
 }
+// [End input_case_entry_module]
