--- a/code/DocsSample/pasteboard/pasteboard_arkts_sample/entry/src/main/module.json5
+++ b/code/DocsSample/pasteboard/pasteboard_arkts_sample/entry/src/main/module.json5
@@ -45,6 +45,18 @@
           }
         ],
       }
+    ],
+    "requestPermissions": [
+      {
+        "name": "ohos.permission.READ_PASTEBOARD",
+        "reason": "$string:READ_PASTEBOARD_reason",
+        "usedScene": {
+          "abilities": [
+            "EntryAbility"
+          ],
+          "when": "inuse"
+        }
+      }
     ]
   }
 }
