--- a/code/DocsSample/MindSporeLiteKit/MindSporeLiteCDemo/entry/src/main/module.json5
+++ b/code/DocsSample/MindSporeLiteKit/MindSporeLiteCDemo/entry/src/main/module.json5
@@ -1,5 +1,5 @@
 /*
-* Copyright (c) 2025 Huawei Device Co., Ltd.
+* Copyright (c) 2024-2025 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
@@ -15,37 +15,46 @@
 
 {
   "module": {
-    "name": "entry_test",
-    "type": "feature",
-    "description": "$string:module_test_desc",
-    "mainElement": "TestAbility",
+    "name": "entry",
+    "type": "entry",
+    "description": "$string:module_desc",
+    "mainElement": "EntryAbility",
     "deviceTypes": [
       "default",
       "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
-    "pages": "$profile:test_pages",
+    "pages": "$profile:main_pages",
     "abilities": [
       {
-        "name": "TestAbility",
-        "srcEntry": "./ets/testability/TestAbility.ets",
-        "description": "$string:TestAbility_desc",
+        "name": "EntryAbility",
+        "srcEntry": "./ets/entryability/EntryAbility.ets",
+        "description": "$string:EntryAbility_desc",
         "icon": "$media:icon",
-        "label": "$string:TestAbility_label",
-        "exported": true,
-        "startWindowIcon": "$media:icon",
+        "label": "$string:EntryAbility_label",
+        "startWindowIcon": "$media:startIcon",
         "startWindowBackground": "$color:start_window_background",
+        "exported": true,
         "skills": [
           {
-            "actions": [
-              "action.system.home"
-            ],
             "entities": [
               "entity.system.home"
+            ],
+            "actions": [
+              "action.system.home"
             ]
           }
         ]
+      }
+    ],
+    "requestPermissions": [
+      {
+        "name": "ohos.permission.READ_IMAGEVIDEO",
+        "reason": "$string:read_image_video_permission",
+        "usedScene": {
+          "when": "inuse"
+        }
       }
     ]
   }
