--- a/code/DocsSample/MindSporeLiteKit/MindSporeLiteCDemo/AppScope/app.json5
+++ b/code/DocsSample/MindSporeLiteKit/MindSporeLiteCDemo/AppScope/app.json5
@@ -14,4 +14,12 @@
 */
 
 {
+  "app": {
+    "bundleName": "com.samples.mindsporelitecdemo",
+    "vendor": "samples",
+    "versionCode": 1000000,
+    "versionName": "1.0.0",
+    "icon": "$media:app_icon",
+    "label": "$string:app_name"
+  }
 }
