--- a/code/DocsSample/MindSporeLiteKit/MindSporeLiteCDemo/entry/build-profile.json5
+++ b/code/DocsSample/MindSporeLiteKit/MindSporeLiteCDemo/entry/build-profile.json5
@@ -16,6 +16,12 @@
 {
   "apiType": "stageMode",
   "buildOption": {
+    "externalNativeOptions": {
+      "path": "./src/main/cpp/CMakeLists.txt",
+      "abiFilters": ['arm64-v8a', 'armeabi-v7a', 'x86_64'],
+      "arguments": "",
+      "cppFlags": "",
+    }
   },
   "buildOptionSet": [
     {
@@ -28,6 +34,12 @@
               "./obfuscation-rules.txt"
             ]
           }
+        }
+      },
+      "nativeLib": {
+        "debugSymbol": {
+          "strip": true,
+          "exclude": []
         }
       }
     },
