--- a/code/DocsSample/Security/AssetStoreKit/AssetStoreNdk/AppScope/app.json5
+++ b/code/DocsSample/Security/AssetStoreKit/AssetStoreNdk/AppScope/app.json5
@@ -16,6 +16,9 @@
 {
   "app": {
     "bundleName": "com.samples.assetstorendk",
+    "assetAccessGroups": [
+      "demo_group_id",
+    ],
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
