--- a/code/DocsSample/ArkUISample/NativeDialogSample/entry/src/main/module.json5
+++ b/code/DocsSample/ArkUISample/NativeDialogSample/entry/src/main/module.json5
@@ -36,6 +36,7 @@
         "startWindowIcon": "$media:startIcon",
         "startWindowBackground": "$color:start_window_background",
         "exported": true,
+        "orientation": "auto_rotation",
         "skills": [
           {
             "entities": [
