--- a/code/SystemFeature/DeviceManagement/DeviceManagementCollection/entry/src/main/module.json5
+++ b/code/SystemFeature/DeviceManagement/DeviceManagementCollection/entry/src/main/module.json5
@@ -76,6 +76,9 @@
       },
       {
         "name": "ohos.permission.INJECT_INPUT_EVENT"
+      },
+      {
+        "name": "ohos.permission.MANAGE_SECURE_SETTINGS"
       }
     ]
   }
