--- a/code/DocsSample/CoreFile/UserFile/SelectingUserFiles/build-profile.json5
+++ b/code/DocsSample/CoreFile/UserFile/SelectingUserFiles/build-profile.json5
@@ -19,8 +19,8 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "compileSdkVersion": 16,
-        "compatibleSdkVersion": 16,
+        "compileSdkVersion": 20,
+        "compatibleSdkVersion": 20,
         "runtimeOS": "OpenHarmony",
         "buildOption": {
           "externalNativeOptions": {
@@ -32,14 +32,14 @@
               "arm64-v8a",
               "x86_64",
               "armeabi-v7a"
-            ],
+            ]
           }
         }
       }
     ],
     "buildModeSet": [
       {
-        "name": "debug",
+        "name": "debug"
       },
       {
         "name": "release"
