指南示例代码与sample仓同源
Signed-off-by: Leal <lealtan@163.com>

--- a/code/DocsSample/Security/DeviceCertificateKit/CertificateManagement/entry/src/main/module.json5
+++ b/code/DocsSample/Security/DeviceCertificateKit/CertificateManagement/entry/src/main/module.json5
@@ -63,6 +63,8 @@
       }
     ],
     "requestPermissions": [
+      // To use the installUserTrustedCertificateSync or uninstallUserTrustedCertificateSync interface,
+      // you need to apply for the following permission: ohos.permission.ACCESS_ENTERPRISE_USER_TRUSTED_CERT.
       {
         "name": "ohos.permission.ACCESS_CERT_MANAGER",
         "reason": "$string:reason",
