--- a/code/DocsSample/CoreFile/PersistPermission/oh-package.json5
+++ b/code/DocsSample/CoreFile/PersistPermission/oh-package.json5
@@ -13,17 +13,13 @@
  * limitations under the License.
  */
 
-// [Start backup_sample]
-import { hilog } from '@kit.PerformanceAnalysisKit';
-import { BackupExtensionAbility, BundleVersion } from '@kit.CoreFileKit';
-
-export default class EntryBackupAbility extends BackupExtensionAbility {
-  async onBackup() {
-    hilog.info(0x0000, 'testTag', 'onBackup ok');
-  }
-
-  async onRestore(bundleVersion: BundleVersion) {
-    hilog.info(0x0000, 'testTag', 'onRestore ok %{public}s', JSON.stringify(bundleVersion));
+{
+  "modelVersion": "6.0.0",
+  "description": "Please describe the basic information.",
+  "dependencies": {
+  },
+  "devDependencies": {
+    "@ohos/hypium": "1.0.24",
+    "@ohos/hamock": "1.0.0"
   }
 }
-// [End backup_sample]
