--- a/code/DocsSample/bmsSample/LayeredImage1/AppScope/app.json5
+++ b/code/DocsSample/bmsSample/LayeredImage1/AppScope/app.json5
@@ -23,7 +23,7 @@
     "versionName": "1.0.0",
     // [EndExclude layered_image_001]
     "icon": "$media:app_icon",
-    "label": "$string:app_name"
+    "label": "$string:app_name" // 需要在AppScope/resources/base/element/string.json配置name为app_name的资源，已存在可以忽略
   }
 }
 // [End layered_image_001]
