--- a/code/DocsSample/bmsSample/LayeredImage2/entry/src/main/module.json5
+++ b/code/DocsSample/bmsSample/LayeredImage2/entry/src/main/module.json5
@@ -38,7 +38,9 @@
         "startWindowBackground": "$color:start_window_background",
         "exported": true,
         // [StartExclude layered_image_004]
+        // icon配置为分层图标资源文件的索引
         "icon": "$media:layered_image",
+        // 需要在entry/src/main/resources/base/element/string.json配置name为EntryAbility_label的资源，已存在可以忽略
         "label": "$string:EntryAbility_label",
         "skills": [
           {
