IssueNo: #6536: ComponentSnapshot docs sample同源 Description: ComponentSnapshot docs sample同源 Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: tianlongdev <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/ReusableComponent/entry/src/main/module.json5
+++ b/code/DocsSample/ArkUISample/ReusableComponent/entry/src/main/module.json5
@@ -20,6 +20,8 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
+      "default",
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
