--- a/code/DocsSample/ArkUISample/ComponentSnapshot/entry/oh-package.json5
+++ b/code/DocsSample/ArkUISample/ComponentSnapshot/entry/oh-package.json5
@@ -14,13 +14,12 @@
  */
 
 {
-  "module": {
-    "name": "entry_test",
-    "type": "feature",
-    "deviceTypes": [
-      "default"
-    ],
-    "deliveryWithInstall": true,
-    "installationFree": false
-  }
+  "name": "entry",
+  "version": "1.0.0",
+  "description": "Please describe the basic information.",
+  "main": "",
+  "author": "",
+  "license": "",
+  "dependencies": {}
 }
+
