--- a/code/DocsSample/ArkUISample/ComponentSnapshot/oh-package.json5
+++ b/code/DocsSample/ArkUISample/ComponentSnapshot/oh-package.json5
@@ -14,13 +14,12 @@
  */
 
 {
-  "module": {
-    "name": "entry_test",
-    "type": "feature",
-    "deviceTypes": [
-      "default"
-    ],
-    "deliveryWithInstall": true,
-    "installationFree": false
+  "modelVersion": "6.0.0",
+  "description": "Please describe the basic information.",
+  "dependencies": {
+  },
+  "devDependencies": {
+    "@ohos/hypium": "1.0.24",
+    "@ohos/hamock": "1.0.0"
   }
 }
