包管理配置文件标签修正
Signed-off-by: jiangminsen <jiangminsen@h-partners.com>

--- a/code/DocsSample/bmsSample/ModuleConfigurationFile01/myHapName/src/main/module.json5
+++ b/code/DocsSample/bmsSample/ModuleConfigurationFile01/myHapName/src/main/module.json5
@@ -166,4 +166,4 @@
 // [End module_proxyData]
 // [End module_extensionAbilities]
 // [End module_abilities]
-// [Start module_deviceTypes]
+// [End module_deviceTypes]
