--- a/code/DocsSample/bmsSample/LayeredImage2/entry/src/main/module.json5
+++ b/code/DocsSample/bmsSample/LayeredImage2/entry/src/main/module.json5
@@ -37,7 +37,7 @@
         "startWindowIcon": "$media:startIcon",
         "startWindowBackground": "$color:start_window_background",
         "exported": true,
-        // [StartExclude layered_image_004]
+        // [EndExclude layered_image_004]
         // icon配置为分层图标资源文件的索引
         "icon": "$media:layered_image",
         // 需要在entry/src/main/resources/base/element/string.json配置name为EntryAbility_label的资源，已存在可以忽略
@@ -69,7 +69,7 @@
         ],
       }
     ],
-    // [StartExclude layered_image_004]
+    // [EndExclude layered_image_004]
   }
 }
 // [End layered_image_004]
