包管理示例工程设备类型去掉default
Signed-off-by: jiangminsen <jiangminsen@h-partners.com>

--- a/code/DocsSample/bmsSample/AppClone/entry/src/main/module.json5
+++ b/code/DocsSample/bmsSample/AppClone/entry/src/main/module.json5
@@ -20,7 +20,7 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "default"
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
