--- a/code/DocsSample/bmsSample/InAppHsp1/entry/src/main/module.json5
+++ b/code/DocsSample/bmsSample/InAppHsp1/entry/src/main/module.json5
@@ -20,7 +20,7 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "default"
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
