IssueNo: #6529:根据卡片状态刷新不同内容和卡片拉起应用 UIAbility 到后台（call 事件） Description: 根据卡片状态刷新不同内容和卡片拉起应用 UIAbility 到后台（call 事件） Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: xiexiangyu002 <tianlong18@h-partners.com>

--- a/code/DocsSample/ApplicationModels/StageServiceWidgetCards/build-profile.json5
+++ b/code/DocsSample/ApplicationModels/StageServiceWidgetCards/build-profile.json5
@@ -19,10 +19,10 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "compileSdkVersion": 14,
-        "targetSdkVersion": 14,
-        "compatibleSdkVersion": 14,
-        "runtimeOS": "OpenHarmony"
+        "compileSdkVersion": "6.0.0(20)",
+        "targetSdkVersion": "6.0.0(20)",
+        "compatibleSdkVersion": "6.0.0(20)",
+        "runtimeOS": "HarmonyOS"
       }
     ],
     "signingConfigs": [
