--- a/code/DocsSample/ApplicationModels/StageServiceWidgetCards/entry/build-profile.json5
+++ b/code/DocsSample/ApplicationModels/StageServiceWidgetCards/entry/build-profile.json5
@@ -21,7 +21,7 @@
   "targets": [
     {
       "name": "default",
-      "runtimeOS": "OpenHarmony"
+      "runtimeOS": "HarmonyOS"
     },
     {
       "name": "ohosTest",
