--- a/code/DocsSample/ArkUISample/Prop/entry/src/main/module.json5
+++ b/code/DocsSample/ArkUISample/Prop/entry/src/main/module.json5
@@ -1,5 +1,4 @@
-<<<<<<< HEAD
-=======
+
 /*
  * Copyright (c) 2025 Huawei Device Co., Ltd.
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
->>>>>>> f030e8b08 (Prop)
+
 {
   "module": {
     "name": "entry",
@@ -22,10 +21,7 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-<<<<<<< HEAD
-      "phone"
-=======
->>>>>>> f030e8b08 (Prop)
+      "default"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
