传统曲线动画及弹簧曲线同步sample仓
Signed-off-by: tianlongdevcode <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/Animation/entry/src/main/module.json5
+++ b/code/DocsSample/ArkUISample/Animation/entry/src/main/module.json5
@@ -32,7 +32,9 @@
         "icon": "$media:layered_image",
         "label": "$string:EntryAbility_label",
         "startWindowIcon": "$media:startIcon",
+        // [Start auto_rotation]
         "orientation": "auto_rotation",
+        // [End auto_rotation]
         "startWindowBackground": "$color:start_window_background",
         "exported": true,
         "skills": [
@@ -60,6 +62,9 @@
           }
         ]
       }
-    ]
+    ],
+    // [Start navigation_router_map]
+    "routerMap": "$profile:route_map",
+    // [End navigation_router_map]
   }
 }
