--- a/code/DocsSample/graphic/ArkGraphics2D/ComplexTextDrawing/build-profile.json5
+++ b/code/DocsSample/graphic/ArkGraphics2D/ComplexTextDrawing/build-profile.json5
@@ -19,9 +19,15 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "compileSdkVersion": 14,
-        "compatibleSdkVersion": 14,
-        "runtimeOS": "OpenHarmony"
+        "targetSdkVersion": "6.0.0(20)",
+        "compatibleSdkVersion": "6.0.0(20)",
+        "runtimeOS": "HarmonyOS",
+        "buildOption": {
+          "strictMode": {
+            "caseSensitiveCheck": true,
+            "useNormalizedOHMUrl": true
+          }
+        }
       }
     ],
     "buildModeSet": [
@@ -44,7 +50,7 @@
             "default"
           ]
         }
-      ],
+      ]
     }
   ]
 }
