--- a/code/DocsSample/graphic/ArkGraphics2D/ComplexTextDrawing/entry/build-profile.json5
+++ b/code/DocsSample/graphic/ArkGraphics2D/ComplexTextDrawing/entry/build-profile.json5
@@ -16,6 +16,11 @@
 {
   "apiType": "stageMode",
   "buildOption": {
+    "resOptions": {
+      "copyCodeResource": {
+        "enable": false
+      }
+    }
   },
   "buildOptionSet": [
     {
