--- a/code/DocsSample/graphic/ArkGraphics2D/SimpleTextDrawing/build-profile.json5
+++ b/code/DocsSample/graphic/ArkGraphics2D/SimpleTextDrawing/build-profile.json5
@@ -19,19 +19,25 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "compileSdkVersion": 14,
-        "compatibleSdkVersion": 14,
-        "runtimeOS": "OpenHarmony"
+        "targetSdkVersion": "6.0.0(20)",
+        "compatibleSdkVersion": "6.0.0(20)",
+        "runtimeOS": "HarmonyOS",
+        "buildOption": {
+          "strictMode": {
+            "caseSensitiveCheck": true,
+            "useNormalizedOHMUrl": true
+          }
+        }
       }
     ],
     "buildModeSet": [
       {
-        "name": "debug"
+        "name": "debug",
       },
       {
         "name": "release"
       }
-    ],
+    ]
   },
   "modules": [
     {
@@ -44,7 +50,7 @@
             "default"
           ]
         }
-      ],
+      ]
     }
   ]
 }
