IssueNo: #6555:@Type装饰器：标记类属性的类型和自定义组件的自定义布局示例开发 Description: @Type装饰器：标记类属性的类型和自定义组件的自定义布局示例开发 Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: xiexiangyu002 <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/ComponentsLayout/build-profile.json5
+++ b/code/DocsSample/ArkUISample/ComponentsLayout/build-profile.json5
@@ -5,9 +5,10 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "targetSdkVersion": "6.0.0(20)",
-        "compatibleSdkVersion": "6.0.0(20)",
-        "runtimeOS": "HarmonyOS",
+        "targetSdkVersion": 20,
+        "compileSdkVersion": 20,
+        "compatibleSdkVersion": 20,
+        "runtimeOS": "OpenHarmony",
         "buildOption": {
           "strictMode": {
             "caseSensitiveCheck": true,
