资源管理sample修改
Signed-off-by: limin_321 <limin191@huawei.com>

--- a/code/DocsSample/ResourceManagement/RawFile/entry/src/main/cpp/CMakeLists.txt
+++ b/code/DocsSample/ResourceManagement/RawFile/entry/src/main/cpp/CMakeLists.txt
@@ -24,5 +24,5 @@ endif()
 include_directories(${NATIVERENDER_ROOT_PATH}
                     ${NATIVERENDER_ROOT_PATH}/include)
 
-add_library(entry SHARED hello.cpp)
+add_library(entry SHARED hello.cpp hello.h)
 target_link_libraries(entry PUBLIC libace_napi.z.so libhilog_ndk.z.so librawfile.z.so)
