--- a/code/DocsSample/ResourceManagement/ResourceCategoriesAndAccess/AppScope/app.json5
+++ b/code/DocsSample/ResourceManagement/ResourceCategoriesAndAccess/AppScope/app.json5
@@ -13,10 +13,13 @@
  * limitations under the License.
  */
 
-// [Start declare_interface]
-import resourceManager from '@ohos.resourceManager';
-export const getFileList: (resmgr: resourceManager.ResourceManager, path: string) => Array<String>;
-export const getRawFileContent: (resmgr: resourceManager.ResourceManager, path: string) => Uint8Array;
-export const getRawFileDescriptor: (resmgr: resourceManager.ResourceManager, path: string) => resourceManager.RawFileDescriptor;
-export const isRawDir: (resmgr: resourceManager.ResourceManager, path: string) => boolean;
-// [End declare_interface]
+{
+  "app": {
+    "bundleName": "com.samples.resourcecategoriesandaccess",
+    "vendor": "samples",
+    "versionCode": 1000000,
+    "versionName": "1.0.0",
+    "icon": "$media:layered_image",
+    "label": "$string:app_name"
+  }
+}
