--- a/code/DocsSample/ResourceManagement/ResourceCategoriesAndAccess/entry/oh-package.json5
+++ b/code/DocsSample/ResourceManagement/ResourceCategoriesAndAccess/entry/oh-package.json5
@@ -13,10 +13,15 @@
  * limitations under the License.
  */
 
-// [Start declare_interface]
-import resourceManager from '@ohos.resourceManager';
-export const getFileList: (resmgr: resourceManager.ResourceManager, path: string) => Array<String>;
-export const getRawFileContent: (resmgr: resourceManager.ResourceManager, path: string) => Uint8Array;
-export const getRawFileDescriptor: (resmgr: resourceManager.ResourceManager, path: string) => resourceManager.RawFileDescriptor;
-export const isRawDir: (resmgr: resourceManager.ResourceManager, path: string) => boolean;
-// [End declare_interface]
+{
+  "name": "entry",
+  "version": "1.0.0",
+  "description": "Resource categories and access sample.",
+  "main": "",
+  "author": "",
+  "license": "",
+  "dependencies": {
+    "library": "file:../library"
+  }
+}
+
