IssueNo: #6582:进度条 (Progress) Description: 补充进度条 (Progress)内容 Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: huzhipeng <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/InfoComponent/ProgressProject/build-profile.json5
+++ b/code/DocsSample/ArkUISample/InfoComponent/ProgressProject/build-profile.json5
@@ -15,15 +15,14 @@
 
 {
   "app": {
-    "signingConfigs": [
-    ],
+    "signingConfigs": [],
     "products": [
       {
         "name": "default",
         "signingConfig": "default",
-        "compileSdkVersion": 14,
-        "compatibleSdkVersion": 14,
-        "targetSdkVersion": 14,
+        "compileSdkVersion": 20,
+        "compatibleSdkVersion": 18,
+        "targetSdkVersion": 20,
         "runtimeOS": "OpenHarmony",
         "buildOption": {
           "strictMode": {
