--- a/code/DocsSample/ArkUISample/InfoComponent/ProgressProject/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/ArkUISample/InfoComponent/ProgressProject/entry/src/ohosTest/module.json5
@@ -18,10 +18,7 @@
   "module": {
     "name": "entry_test",
     "type": "feature",
-    "deviceTypes": [
-      "default",
-      "tablet"
-    ],
+    "deviceTypes": [],
     "deliveryWithInstall": true,
     "installationFree": false
   }
