--- a/code/DocsSample/graphic/ArkGraphics2D/ComplexTextDrawing/build-profile.json5
+++ b/code/DocsSample/graphic/ArkGraphics2D/ComplexTextDrawing/build-profile.json5
@@ -19,15 +19,9 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "targetSdkVersion": "6.0.0(20)",
-        "compatibleSdkVersion": "6.0.0(20)",
-        "runtimeOS": "HarmonyOS",
-        "buildOption": {
-          "strictMode": {
-            "caseSensitiveCheck": true,
-            "useNormalizedOHMUrl": true
-          }
-        }
+        "compileSdkVersion": 20,
+        "compatibleSdkVersion": 20,
+        "runtimeOS": "OpenHarmony"
       }
     ],
     "buildModeSet": [
