IssueNo: #6592:AppStartup Description: 应用启动框架AppStartup工程化 Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: LiuHan <tianlong18@h-partners.com>

--- a/code/DocsSample/Ability/MetaCompetences/entry/src/main/resources/base/profile/startup_config.json
+++ b/code/DocsSample/Ability/MetaCompetences/entry/src/main/resources/base/profile/startup_config.json
@@ -35,6 +35,7 @@
       "srcEntry": "./ets/startup/StartupTask_004.ets",
       "runOnThread": "taskPool",
       "waitOnMainThread": false,
+      "schedulerPhase": "preAbilityStageLoad",
       "matchRules": {
         "uris": [
           "test://com.example.startupdemo/notification"
