提交Router切换Navigation代码
Signed-off-by: tianlongdevcode <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/Navigation/build-profile.json5
+++ b/code/DocsSample/ArkUISample/Navigation/build-profile.json5
@@ -14,14 +14,16 @@
  */
 {
   "app": {
-    "signingConfigs": [],
+    "signingConfigs": [
+
+    ],
     "products": [
       {
         "name": "default",
         "signingConfig": "default",
         "targetSdkVersion": 20,
         "compatibleSdkVersion": 20,
-        "compileSdkVersion": 20,
+        "compileSdkVersion": 22,
         "runtimeOS": "OpenHarmony",
         "buildOption": {
           "strictMode": {
