update: 更新文件 module.json5
Signed-off-by: tianlongdevcode <tianlong18@h-partners.com>

--- a/code/DocsSample/Ability/AbilityStage/entry/src/main/module.json5
+++ b/code/DocsSample/Ability/AbilityStage/entry/src/main/module.json5
@@ -22,11 +22,7 @@
     // [StartExclude abilityModule_start]
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
-    "deviceTypes": [
-      "phone",
-      "tablet",
-      "2in1"
-    ],
+    "deviceTypes": [],
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
