update: 更新文件 module.json5
Signed-off-by: tianlongdevcode <tianlong18@h-partners.com>

--- a/code/DocsSample/Ability/UIServiceExtensionAbility/entry/src/main/module.json5
+++ b/code/DocsSample/Ability/UIServiceExtensionAbility/entry/src/main/module.json5
@@ -18,9 +18,7 @@
     "type": "entry",
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
-    "deviceTypes": [
-      "2in1"
-    ],
+    "deviceTypes": [],
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
