--- a/code/DocsSample/ApplicationModels/StageServiceWidgetCards/entry/src/main/module.json5
+++ b/code/DocsSample/ApplicationModels/StageServiceWidgetCards/entry/src/main/module.json5
@@ -21,10 +21,7 @@
     "type": "entry",
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
-    "deviceTypes": [
-      "default",
-      "tablet"
-    ],
+    "deviceTypes": [],
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
