修改门禁代码问题
Signed-off-by: tianlongdevcode <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/ScrollableComponent/entry/src/main/module.json5
+++ b/code/DocsSample/ArkUISample/ScrollableComponent/entry/src/main/module.json5
@@ -19,7 +19,10 @@
     "type": "entry",
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
-    "deviceTypes": [],
+    "deviceTypes": [
+      "default",
+      "tablet"
+    ],
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
