add DriverDemo Sample
Signed-off-by: lixinsheng2 <lixinsheng2@huawei.com>

--- a/code/DocsSample/DriverDevelopmentKit/DriverDemo/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/DriverDevelopmentKit/DriverDemo/entry/src/ohosTest/module.json5
@@ -3,8 +3,7 @@
     "name": "entry_test",
     "type": "feature",
     "deviceTypes": [
-      "tablet",
-      "2in1"
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false
