--- a/code/DocsSample/DriverDevelopmentKit/DriverDemo/build-profile.json5
+++ b/code/DocsSample/DriverDevelopmentKit/DriverDemo/build-profile.json5
@@ -1,13 +1,15 @@
 {
   "app": {
-    "signingConfigs": [],
+    "signingConfigs": [
+    ],
     "products": [
       {
         "name": "default",
         "signingConfig": "default",
-        "targetSdkVersion": "6.0.0(20)",
-        "compatibleSdkVersion": "6.0.0(20)",
-        "runtimeOS": "HarmonyOS",
+        "targetSdkVersion": 20,
+        "compatibleSdkVersion": 20,
+        "compileSdkVersion": 20,
+        "runtimeOS": "OpenHarmony",
         "buildOption": {
           "nativeCompiler": "BiSheng",
           "strictMode": {
