--- a/code/DocsSample/DriverDevelopmentKit/DriverDemo/entry/src/main/module.json5
+++ b/code/DocsSample/DriverDevelopmentKit/DriverDemo/entry/src/main/module.json5
@@ -6,9 +6,7 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "default",
-      "tablet",
-      "2in1"
+      "default"
     ],
     "requestPermissions": [
       {
