IssueNo: #6531:图文混排和图标小符号 Description: 实现图文混排开发，填充图标小符号 Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: huzhipeng <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/TextComponent/entry/src/main/module.json5
+++ b/code/DocsSample/ArkUISample/TextComponent/entry/src/main/module.json5
@@ -20,8 +20,8 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      'default',
-      'tablet'
+      "default",
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
