--- a/code/DocsSample/ArkData/Udmf/ContentForm/AppScope/app.json5
+++ b/code/DocsSample/ArkData/Udmf/ContentForm/AppScope/app.json5
@@ -15,7 +15,7 @@
 
 {
   "app": {
-    "bundleName": "com.samples.myapplication",
+    "bundleName": "com.samples.comtenform",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
