修改代码和提交栅格布局用例代码
Signed-off-by: tianlongdevcode <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/MultipleLayoutProject/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/ArkUISample/MultipleLayoutProject/entry/src/ohosTest/module.json5
@@ -16,9 +16,7 @@
   "module": {
     "name": "entry_test",
     "type": "feature",
-    "deviceTypes": [
-      "phone"
-    ],
+    "deviceTypes": [],
     "deliveryWithInstall": true,
     "installationFree": false
   }
