--- a/code/DocsSample/ArkUISample/MultipleLayoutProject/entry/src/main/module.json5
+++ b/code/DocsSample/ArkUISample/MultipleLayoutProject/entry/src/main/module.json5
@@ -18,9 +18,7 @@
     "type": "entry",
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
-    "deviceTypes": [
-      "phone"
-    ],
+    "deviceTypes": [],
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
