修改代码检视问题
Signed-off-by: tianlongdevcode <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/CustomCanvas/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/ArkUISample/CustomCanvas/entry/src/ohosTest/module.json5
@@ -16,7 +16,10 @@
   "module": {
     "name": "entry_test",
     "type": "feature",
-    "deviceTypes": [],
+    "deviceTypes": [
+      "default",
+      "tablet"
+    ],
     "deliveryWithInstall": true,
     "installationFree": false
   }
