--- a/code/DocsSample/Ability/UIAbilityLifecycle/AppScope/app.json5
+++ b/code/DocsSample/Ability/UIAbilityLifecycle/AppScope/app.json5
@@ -12,13 +12,19 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
+// [Start app_start]
 {
   "app": {
+    "startMode": "mainTask",
+    // [StartExclude app_start]
     "bundleName": "com.example.uiabilitylifecycle",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
     "icon": "$media:layered_image",
-    "label": "$string:app_name"
+    "label": "$string:app_name",
+    // [EndExclude  app_start]
   }
 }
+// [End app_start]
