IssueNo: #6665:卡片编辑开发指导Sample代码同源 Description: 1.优化已有工程FormEditDemo为完整的卡片半模态编辑页示例工程              2.新增卡片编辑的全屏编辑页示例工程FormEditUIAbility Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: niuyongqing <tianlong18@h-partners.com>

--- a/code/DocsSample/Form/FormEditDemo/entry/src/main/module.json5
+++ b/code/DocsSample/Form/FormEditDemo/entry/src/main/module.json5
@@ -48,7 +48,9 @@
         ]
       }
     ],
+    // [Start FormEditDemo_modulejson5]
     "extensionAbilities": [
+      // [StartExclude FormEditDemo_modulejson5]
       {
         "name": "EntryFormAbility",
         "srcEntry": "./ets/entryformability/EntryFormAbility.ets",
@@ -62,16 +64,20 @@
           }
         ]
       },
+      // [EndExclude FormEditDemo_modulejson5]
       {
+        // 一级编辑页配置
         "name": "EntryFormEditAbility",
         "srcEntry": "./ets/entryformeditability/EntryFormEditAbility.ets",
         "type": "formEdit"
       },
       {
+        // 二级编辑页配置
         "name": "FormEditSecPageAbility",
         "srcEntry": "./ets/entryformeditability/FormEditSecPageAbility.ets",
         "type": "formEdit"
       }
-    ]
+    ],
+    // [End FormEditDemo_modulejson5]
   }
 }
