--- a/code/DocsSample/Form/FormEditDemo/entry/src/main/resources/base/profile/form_config.json
+++ b/code/DocsSample/Form/FormEditDemo/entry/src/main/resources/base/profile/form_config.json
@@ -7,15 +7,12 @@
       "src": "./ets/widget/pages/WidgetCard.ets",
       "uiSyntax": "arkts",
       "formConfigAbility": "ability://EntryFormEditAbility",
-      "window": {
-        "designWidth": 720,
-        "autoDesignWidth": true
-      },
       "colorMode": "auto",
       "isDynamic": true,
       "isDefault": true,
       "updateEnabled": false,
       "scheduledUpdateTime": "10:30",
+      "multiScheduledUpdateTime": "11:30,16:30",
       "updateDuration": 1,
       "defaultDimension": "1*2",
       "supportDimensions": [
