IssueNo: #6642: 新增：卡片使用方主动刷新卡片内容（仅对系统应用开放）的工程FormUpdateDemo Description:  新增：卡片使用方主动刷新卡片内容（仅对系统应用开放）的工程FormUpdateDemo Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: niuyongqing <tianlong18@h-partners.com>

--- a/code/DocsSample/Form/FormUpdateDemo/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/Form/FormUpdateDemo/entry/src/ohosTest/module.json5
@@ -17,6 +17,8 @@
     "name": "entry_test",
     "type": "feature",
     "deviceTypes": [
+      "default",
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false
