--- a/code/DocsSample/Form/FormUpdateDemo/entry/src/main/module.json5
+++ b/code/DocsSample/Form/FormUpdateDemo/entry/src/main/module.json5
@@ -19,6 +19,8 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
+      "default",
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
